--- a/parameter_tunning.ipynb
+++ b/parameter_tunning.ipynb
@@ -122,6 +122,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Logistic Regression without regularization"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -280,6 +288,155 @@
     "    'solver': ['saga', 'lbfgs', 'liblinear'], \n",
     "    'max_iter': [200, 500, 1000, 1500],\n",
     "    'C': [1, 10, 100, 1000, 10000], \n",
+    "}\n",
+    "\n",
+    "best_log_params = parameter_tunning(x_train, x_test, y_train, y_test, clf, param_grid)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Logistic Regression with regularization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = LogisticRegression()\n",
+    "\n",
+    "param_grid = {\n",
+    "    'solver': ['saga', 'liblinear'], \n",
+    "    'max_iter': [1000, 5000, 10000],\n",
+    "    'C': [1, 10, 100, 1000, 5000],\n",
+    "    'penalty': ['l1'] \n",
+    "}\n",
+    "\n",
+    "best_log_params = parameter_tunning(x_train, x_test, y_train, y_test, clf, param_grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = LogisticRegression()\n",
+    "\n",
+    "param_grid = {\n",
+    "    'solver': ['saga', 'liblinear', 'lbfgs'], \n",
+    "    'max_iter': [500, 1000, 1500],\n",
+    "    'C': [1, 10, 100, 1000, 5000],\n",
+    "    'penalty': ['l2'] \n",
+    "}\n",
+    "\n",
+    "best_log_params = parameter_tunning(x_train, x_test, y_train, y_test, clf, param_grid)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SVM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = svm()\n",
+    "\n",
+    "param_grid = {\n",
+    "    'C': [1, 10, 100, 1000], \n",
+    "    'gamma': [0.001, 0.01, 0.1, 1],\n",
+    "    'kernel': ['rbf', 'sigmoid']\n",
+    "}\n",
+    "\n",
+    "best_log_params = parameter_tunning(x_train, x_test, y_train, y_test, clf, param_grid)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## XGBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = XGBClassifier()\n",
+    "\n",
+    "param_grid = {\n",
+    "    'learning_rate': [0.01, 0.1, 0.3],\n",
+    "    'max_depth': [3, 5],\n",
+    "    'n_estimators': [100, 1000],\n",
+    "    'gamma': [0, 0.1, 0.3]\n",
+    "}\n",
+    "\n",
+    "best_log_params = parameter_tunning(x_train, x_test, y_train, y_test, clf, param_grid)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = RandomForestClassifier()\n",
+    "\n",
+    "param_grid = {\n",
+    "    'n_estimators': [100, 1000],\n",
+    "    'max_depth': [5, 10, 12, 15],\n",
+    "    'min_samples_split': [2, 10, 14],\n",
+    "    'min_samples_leaf': [2, 4 , 6],\n",
+    "    'max_features': ['sqrt', 'log2'],\n",
+    "}\n",
+    "\n",
+    "best_log_params = parameter_tunning(x_train, x_test, y_train, y_test, clf, param_grid)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Neural Network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = MLPClassifier()\n",
+    "\n",
+    "param_grid = {\n",
+    "    'hidden_layer_sizes': [(8,), (8,6)],\n",
+    "    'activation': ['relu', 'tanh'],\n",
+    "    'solver': ['sgd', 'adam'],\n",
+    "    'alpha': [0.0001, 0.001, 0.01],\n",
+    "    'learning_rate': ['constant', 'adaptive'],\n",
     "}\n",
     "\n",
     "best_log_params = parameter_tunning(x_train, x_test, y_train, y_test, clf, param_grid)"
