--- a/parameter_tunning.ipynb
+++ b/parameter_tunning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,11 +347,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best hyperparameters:  {'C': 1000, 'gamma': 1, 'kernel': 'rbf'}\n",
+      "Best score:  0.9615740182483219\n",
+      "Classification Report: \n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      GALAXY       0.93      0.96      0.94     17707\n",
+      "        STAR       0.99      1.00      0.99     17742\n",
+      "      QUASAR       0.97      0.93      0.95     17864\n",
+      "\n",
+      "    accuracy                           0.96     53313\n",
+      "   macro avg       0.96      0.96      0.96     53313\n",
+      "weighted avg       0.96      0.96      0.96     53313\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "clf = svm()\n",
+    "clf = SVC()\n",
     "\n",
     "param_grid = {\n",
     "    'C': [1, 10, 100, 1000], \n",
