Optimal model training functions

--- a/star.ipynb
+++ b/star.ipynb
@@ -508,7 +508,7 @@
    "outputs": [],
    "source": [
     "# Scatterplot Matrix\n",
-    "#sea.pairplot(x2, hue='class')"
+    "sea.pairplot(x2, hue='class')"
    ]
   },
   {
@@ -557,7 +557,7 @@
    "outputs": [],
    "source": [
     "# Scatterplot Matrix\n",
-    "#sea.pairplot(x2, hue='class')"
+    "sea.pairplot(x2, hue='class')"
    ]
   },
   {
